fixed alignment issue with tables on admin page

--- a/pages/admin/admin.module.css
+++ b/pages/admin/admin.module.css
@@ -34,6 +34,10 @@
   flex: 1;
 }
 
+.users_container {
+  padding: 0 2rem;
+}
+
 .functions_header {
   font-family: "Lato", sans-serif;
   color: white;
@@ -181,5 +185,8 @@
   .top_container {
     flex-direction: column;
     align-items: center;
+  }
+  .users_container {
+    padding: 0;
   }
 }
